--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
   font-size: 42px;
   font-weight: bold;
   letter-spacing: -2px;
-  border-bottom: 1px #f00;
+  border-bottom: 1px solid #f00;
 }
 
 #content-summarycontent {
